[package]
name = "reqwest-tokio"
description = "Download files from the Internet the async way."
version = "0.1.0"
authors = ["Benjamin Kay <benjamin@benkay.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
# For a truly multithreaded tokio runtime (overkill for this example),
# replace rt-core with rt-threaded.
tokio = { version = "0.2", features = ["macros", "rt-core", "fs", "io-util", "io-driver"] }
util = { path = "../util" }
